[fix] text-overflow, 스크린 리더 수정

--- a/과제-2/Mission-02/stylesheets/pages/offer.css
+++ b/과제-2/Mission-02/stylesheets/pages/offer.css
@@ -84,6 +84,9 @@
 	margin: 12px 0;
 	line-height: 1.2;
 	color: var(--color-black);
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .free-post{
